[gd_scene load_steps=4 format=3 uid="uid://d2082uor6xgek"]

[ext_resource type="Script" path="res://scripts/betting_scene.gd" id="1_qjunl"]
[ext_resource type="Theme" uid="uid://cuoiyf4rmmrch" path="res://resources/base.tres" id="1_se6to"]
[ext_resource type="Script" path="res://scripts/betting_screen.gd" id="2_jyfgr"]

[node name="BettingScene" type="Node2D"]
script = ExtResource("1_qjunl")

[node name="Screen" type="CanvasLayer" parent="."]
script = ExtResource("2_jyfgr")

[node name="Control" type="Control" parent="Screen"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_se6to")

[node name="MarginContainer" type="MarginContainer" parent="Screen/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 96
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="Screen/Control/MarginContainer"]
layout_mode = 2

[node name="ChipsAndPot" type="VBoxContainer" parent="Screen/Control/MarginContainer/VBoxContainer"]
z_index = 2
custom_minimum_size = Vector2(0, 102)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Chips" type="Label" parent="Screen/Control/MarginContainer/VBoxContainer/ChipsAndPot"]
layout_mode = 2
theme = ExtResource("1_se6to")
theme_override_font_sizes/font_size = 42
text = "Chips: 50"

[node name="Pot" type="Label" parent="Screen/Control/MarginContainer/VBoxContainer/ChipsAndPot"]
layout_mode = 2
theme = ExtResource("1_se6to")
theme_override_font_sizes/font_size = 42
text = "Pot: 0"

[node name="Spacer" type="Panel" parent="Screen/Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_vertical = 4

[node name="Center" type="MarginContainer" parent="Screen/Control/MarginContainer/VBoxContainer"]
z_index = 3
custom_minimum_size = Vector2(0, 339)
layout_mode = 2
size_flags_vertical = 3

[node name="InfoLabel" type="Label" parent="Screen/Control/MarginContainer/VBoxContainer/Center"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme = ExtResource("1_se6to")
theme_override_font_sizes/font_size = 58
text = "twentyone"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer3" type="Panel" parent="Screen/Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2

[node name="Buttons" type="GridContainer" parent="Screen/Control/MarginContainer/VBoxContainer"]
z_index = 3
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="ButtonResetBet" type="Button" parent="Screen/Control/MarginContainer/VBoxContainer/Buttons"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_se6to")
disabled = true
text = "Reset
"

[node name="ButtonConfirmBet" type="Button" parent="Screen/Control/MarginContainer/VBoxContainer/Buttons"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_se6to")
disabled = true
text = "Accept
"

[node name="ButtonDecrease" type="Button" parent="Screen/Control/MarginContainer/VBoxContainer/Buttons"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_se6to")
theme_override_colors/font_color = Color(0.952941, 0.545098, 0.658824, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 196
disabled = true
text = "-1"

[node name="ButtonIncrease" type="Button" parent="Screen/Control/MarginContainer/VBoxContainer/Buttons"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_se6to")
theme_override_colors/font_color = Color(0.65098, 0.890196, 0.631373, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 196
text = "+1"

[node name="DecreasePresets" type="HBoxContainer" parent="Screen/Control/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme = ExtResource("1_se6to")

[node name="ButtonDecrease10" type="Button" parent="Screen/Control/MarginContainer/VBoxContainer/Buttons/DecreasePresets"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_se6to")
theme_override_colors/font_color = Color(0.952941, 0.545098, 0.658824, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 98
disabled = true
text = "-10"

[node name="ButtonDecrease5" type="Button" parent="Screen/Control/MarginContainer/VBoxContainer/Buttons/DecreasePresets"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_se6to")
theme_override_colors/font_color = Color(0.952941, 0.545098, 0.658824, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 98
disabled = true
text = "-5"

[node name="IncreasePresets" type="HBoxContainer" parent="Screen/Control/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
theme = ExtResource("1_se6to")

[node name="ButtonIncrease5" type="Button" parent="Screen/Control/MarginContainer/VBoxContainer/Buttons/IncreasePresets"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_se6to")
theme_override_colors/font_color = Color(0.65098, 0.890196, 0.631373, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 98
text = "+5"

[node name="ButtonIncrease10" type="Button" parent="Screen/Control/MarginContainer/VBoxContainer/Buttons/IncreasePresets"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_se6to")
theme_override_colors/font_color = Color(0.65098, 0.890196, 0.631373, 1)
theme_override_constants/outline_size = 32
theme_override_font_sizes/font_size = 98
text = "+10"
